# haskell-lab2

./: README.md  parallel-integral.cabal
app/: Main.hs
src/Integration/: Parallel.hs  Sequential.hs
