cabal-version:      3.12
name:               parallel-integral
version:            0.1.0.0
license:            NONE
author:             ArturGoz
maintainer:         arturrm4@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Integration.Sequential,
                      Integration.Parallel
    build-depends:    base ^>=4.18.3.0,
                      parallel
    hs-source-dirs:   src
    default-language: GHC2021
    ghc-options:      -O2 -threaded

executable parallel-integral
    import:           warnings
    main-is:          Main.hs
    
    build-depends:    base ^>=4.18.3.0,
                      parallel-integral,
                      time

    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options:      -O2 -threaded -rtsopts -with-rtsopts=-N
